# realm-of-agents

./: .gitignore  .gitmodules  LICENSE  README.md  azure.yaml  pyproject.toml
.github/instructions/: azure-functions.instructions.md  python.instructions.md  realm-of-agents.instructions.md
.github/specs/: repository.md
.github/workflows/: README.md  ci.yml  deploy.yml
docs/: MIGRATION_TO_FOUNDRY.md  RealmOfAgents.md  api-reference.md  architecture.md  contributing.md
src/: agent_config_schema.py  example_agent_registry.json  function_app.py  function_app_original.py  host.json  requirements.txt
tests/: __init__.py  test_realm_of_agents.py
